--- a/i18n/en/LC_MESSAGES/langame.po
+++ b/i18n/en/LC_MESSAGES/langame.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2017-11-14 12:35+0100\n"
-"PO-Revision-Date: 2017-11-14 12:59+0100\n"
+"PO-Revision-Date: 2017-11-30 09:55+0100\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,8 +70,8 @@ msgid "%s! It is '%s'"
 msgstr "%s! It is ‘%s’"
 
 #: langame.py:273
-msgid "Which gender is it? [M]asculine, [N]eutral or [F]emenine?"
-msgstr "Which gender is it? [M]asculine, [N]eutral or [F]emenine?"
+msgid "Which gender is it? [M]asculine, [N]eutral or [F]eminine?"
+msgstr "Which gender is it? [M]asculine, [N]eutral or [F]eminine?"
 
 #: langame.py:284
 #, python-format
