--- a/i18n/fr/LC_MESSAGES/langame.po
+++ b/i18n/fr/LC_MESSAGES/langame.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2017-11-14 13:00+0100\n"
-"PO-Revision-Date: 2017-11-14 13:27+0100\n"
+"PO-Revision-Date: 2017-11-30 09:55+0100\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,7 +70,7 @@ msgid "%s! It is '%s'"
 msgstr "%s! C’est ‘%s’"
 
 #: langame.py:273
-msgid "Which gender is it? [M]asculine, [N]eutral or [F]emenine?"
+msgid "Which gender is it? [M]asculine, [N]eutral or [F]eminine?"
 msgstr "De quel genre s’agit-il? [M]asculin, [N]eutre ou [F]éminin?"
 
 #: langame.py:284
