--- a/i18n/langame.pot
+++ b/i18n/langame.pot
@@ -70,7 +70,7 @@ msgid "%s! It is '%s'"
 msgstr ""
 
 #: langame.py:273
-msgid "Which gender is it? [M]asculine, [N]eutral or [F]emenine?"
+msgid "Which gender is it? [M]asculine, [N]eutral or [F]eminine?"
 msgstr ""
 
 #: langame.py:284
